--- a/src/student/classes/class.css
+++ b/src/student/classes/class.css
@@ -19,7 +19,7 @@
     border : solid 2px #6fb327;
     border-radius: .75rem;
     margin-bottom: 20px;
-    background: linear-gradient(160deg,#86b250,#6fad4f,#57a84b, #44a435,#3da32a,#49a936,#3ba450,#2b9667,#2e9967,#34a063);
+    background: linear-gradient(160deg,#86b250,#6fad4f,#57a84b,#44a435,#3da32a,#49a936,#3ba450,#2b9667,#2e9967,#34a063);
 
 
 }
@@ -159,14 +159,14 @@
 
 
 .s_class_timetable_frame_l{
-    width: 80%;
+    width: 100%;
     height: 600px;
     border : solid 2px #6fb327;
     border-radius: .75rem;
     padding-bottom: 20px;
     min-width: 50%;
     overflow: initial;
-    margin-left: 10%;
+    margin-left: 0;
     float: contour;
 }
 
@@ -195,8 +195,8 @@
 
 
 .s_class_timebody{
-    margin-top: 1%;
-    margin-left: 5%;
+    margin: 2%;
+
 }
 
 .s_class_timetable{
